--- a/CHANGELOG.next.toml
+++ b/CHANGELOG.next.toml
@@ -227,3 +227,15 @@ message = "Code-generated types for server SDKs now implement the `Eq` and `Hash
 references = ["smithy-rs#2223"]
 meta = { "breaking" = false, "tada" = false, "bug" = false, "target" = "server"}
 author = "david-perez"
+
+[[smithy-rs]]
+message = "Fix bug in timestamp format resolution. Prior to this fix, the timestamp format may have been incorrect if set on the target instead of on the member."
+references = ["smithy-rs#2226"]
+meta = { "breaking" = false, "tada" = false, "bug" = true, "target" = "all" }
+author = "rcoh"
+
+[[smithy-rs]]
+message = "Add support for offsets when parsing datetimes. RFC3339 date times now support offsets like `-0200`"
+references = ["smithy-rs#2226"]
+meta = { "breaking" = false, "tada" = false, "bug" = false, "target" = "client" }
+author = "rcoh"
